Adding next button

--- a/PhotoViewer/MainWindow.xaml
+++ b/PhotoViewer/MainWindow.xaml
@@ -13,6 +13,7 @@
         <Grid>
             <Grid.RowDefinitions>
                 <RowDefinition Height="75"></RowDefinition>
+                <RowDefinition Height="631"></RowDefinition>
                 <RowDefinition></RowDefinition>
             </Grid.RowDefinitions>
 
@@ -20,19 +21,19 @@
                      FontSize="20" 
                      TextWrapping="Wrap" 
                      VerticalContentAlignment="Center" 
-                     Height="30" 
-                     Margin="151,0,641,0" 
+                     Margin="151,22,641,23" 
                      TextChanged="TextBoxChanged"
                      BorderThickness="0"
                      Background="Gray"
-                     Foreground="White"
+                     Foreground="White" KeyDown="OnKeyDownHandler"
                         
                     />
-            <Button Name ="SearchButton" Content="Search" Click="OnSearchButtonClicked" Margin="616,24,516,25" RenderTransformOrigin="0.474,-4.22" Background="#FF647EAC" FontSize="14" FontFamily="Bahnschrift" Foreground="White"/>
-            <Button x:Name ="BackButton" Content="Back"  Margin="61,24,1074,25" RenderTransformOrigin="0.474,-4.22" Background="#FF647EAC" FontSize="14" FontFamily="Bahnschrift" Foreground="White" Click="OnBackButtonClicked"/>
-            <Grid x:Name="WebPageLoader" Grid.Row="2">
+            <Button Name ="SearchButton" Grid.Row="0" Content="Search" Click="OnSearchButtonClicked" Margin="616,24,516,25" RenderTransformOrigin="0.474,-4.22" Background="#FF647EAC" FontSize="14" FontFamily="Bahnschrift" Foreground="White"/>
+            <Button x:Name ="BackButton"   Grid.Row="0" Content="Back"  Margin="61,24,1074,25" RenderTransformOrigin="0.474,-4.22" Background="#FF647EAC" FontSize="14" FontFamily="Bahnschrift" Foreground="White" Click="OnBackButtonClicked"/>
+            <Grid x:Name="WebPageLoader" Grid.Row="1">
 
             </Grid>
+            <Button Grid.Row="2"  x:Name ="NextPage" Content="Next Page>>" Click="OnNextButtonClicked" Margin="1043,10,44,28" RenderTransformOrigin="0.474,-4.22" Background="#FF647EAC" FontSize="14" FontFamily="Bahnschrift" Foreground="White"/>
         </Grid>
     </Border>
 
